--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "expo": "^52.0.0",
     "react": "18.3.1",
     "react-native": "0.76.1",
+    "react-native-fast-image": "^8.6.3",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.1.0",
     "react-redux": "^9.1.2",
