--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-native-fast-image": "^8.6.3",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.1.0",
+    "react-native-vector-icons": "^10.2.0",
     "react-redux": "^9.1.2",
     "redux": "^5.0.1",
     "redux-logger": "^3.0.6",
